fixed edit to not work with same name as before